# galley

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.setup.ts
design/etapa3-workshop/: App Mock 1520x960.html  IMPLEMENTATION_PLAN.md  Notes on a Workshop.html  README.md  artifacts.jsx  memo.css  memo.jsx
docs/: appimage-bundle.md
docs/superpowers/: etapa-2-progress.md
docs/superpowers/notes/: 2026-05-23-diff-audit.md
docs/superpowers/plans/: 2026-05-22-github-pr-reviewer.md  2026-05-23-etapa-2-plan.md  2026-05-26-whole-file-diff.md
docs/superpowers/specs/: 2026-05-22-github-pr-reviewer-design.md  2026-05-23-etapa-2-design.md  2026-05-26-whole-file-diff-design.md
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: drafts.rs  error.rs  lib.rs  logging.rs  main.rs  oauth.rs  path_filter.rs  repo_input.rs  secrets.rs  viewed.rs
src-tauri/src/cache/: mod.rs  models.rs  schema.sql  ttl.rs
src-tauri/src/commands/: drafts.rs  filters.rs  mod.rs  oauth.rs  prs.rs  repos.rs  reviews.rs  secrets.rs  settings.rs  system.rs  viewed.rs
src-tauri/src/config/: mod.rs  types.rs
src-tauri/src/github/: diffs.rs  merge.rs  mod.rs  prs.rs  repos.rs  reviews.rs  threads.rs
src-tauri/tests/: cache_test.rs  config_test.rs  drafts_test.rs  path_filter_test.rs  viewed_test.rs
src/__tests__/: BrowseReposModal.test.tsx  CommandPalette.test.tsx  FileTreeDrawer.test.tsx  FileTreePanel.test.tsx  GlobalHeader.test.tsx  InlineThreadWidget.test.tsx  InlineThreadWidgetResolve.test.tsx  MergePanel.test.tsx  PatSection.test.tsx  PrListPanel.test.tsx  PrMetaStrip.test.tsx  ReviewSubmitModal.test.tsx  ReviewSubmitPanel.test.tsx  SettingsModal.test.tsx  TitleBar.test.tsx  buildFullFileModel.test.ts  diffModelPath.test.ts  formatAge.test.ts  fuzzy.test.ts  parseDiff.test.ts  prsStore.test.ts  treeBuild.test.ts  useDiffRenderMode.test.ts
src/components/common/: Banner.tsx  Modal.tsx  Toast.tsx
src/components/diff/: CommentLineModal.tsx  DiffPanel.tsx  InlineCommentEditor.tsx  InlineDraftWidget.tsx  InlineThreadWidget.tsx  ThreadsSidebar.tsx  buildFullFileModel.ts  diffModelPath.ts  inlineWidgetStyle.ts  parseDiff.ts  useDiffRenderMode.ts  useDiffViewZones.ts
src/components/files/: FileTreeDrawer.tsx  FileTreeNode.tsx  FileTreePanel.tsx  FileTreeRail.tsx  treeBuild.ts
src/components/layout/: CommandPalette.tsx  GlobalHeader.tsx  Layout.tsx  PanelHeader.tsx  PrListRail.tsx  ResizeHandles.tsx  StatusLine.tsx  TitleBar.tsx  shortcuts.ts
src/components/prs/: CiBadge.tsx  PrListItem.tsx  PrListPanel.tsx  PrMetaStrip.tsx
src/components/review/: MergePanel.tsx  ReviewSubmitModal.tsx  ReviewSubmitPanel.tsx
src/components/settings/: ContaSection.tsx  (+9 more)
src/hooks/: useCiAutoRefresh.ts
src/i18n/: creed.ts  index.ts
src/ipc/: client.ts  errors.ts  types.ts
src/state/: draftsStore.ts  prsStore.ts  settingsStore.ts  uiStore.ts
src/styles/: globals.css  tokens.css
src/theme/: ThemeProvider.tsx  catppuccin.ts  monaco-themes.ts  palette.ts
src/util/: fuzzy.ts  path.ts  time.ts  window.ts
(+18 files in other folders)
