[package]
name = "pr-reviewer"
version = "0.1.0"
description = "Linux desktop GitHub PR reviewer"
authors = ["csequeira153@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
